# qiboagent

./: .gitignore  README.md  cluster_RAG.py  docker-compose.yaml  docker-compose.yml  hyperopt_RAG.py  langChainScript.py  prepare.py  pyproject.toml  script.py  utils.py
answers_json/: answers_gemma3:12b.json  answers_gemma3:4b.json
core_with_backend/: readme.md
core_with_backend/qibo_core/: Cargo.toml
core_with_backend/qibo_core/src/: circuit.rs  gate.rs
core_with_backend/qibo_core/tests/: test_core.rs
core_with_backend/qibo_python/: Cargo.toml  pyproject.toml
core_with_backend/qibo_python/qibo_python/: __init__.py  circuit.py  gates.py
core_with_backend/qibo_python/src/: circuit.rs  gate.rs  lib.rs
core_with_backend/qibo_python/tests/: test_bindings.py
docker/: Dockerfile
docstrings/: result_visualization.py
generated_core/core_oss/: Cargo.toml  README.md
generated_core/core_oss/qibo_core/: Cargo.toml
generated_core/core_oss/qibo_core/src/: circuit.rs  gate.rs  prelude.rs
generated_core/core_oss/qibo_core/tests/: test_core.rs
generated_core/core_oss/qibo_python/: Cargo.toml
generated_core/core_oss/qibo_python/src/: circuit.rs  gate.rs  lib.rs
generated_core/core_oss/qibo_python/tests/: test_bindings.py
mcp_server/: qibo_expert.py
ollama/: dockerfile  entrypoint.sh
python_scripts/: RAG_hybrid.py  RAG_semantic.py  agent.py  agentic_core.py  cli_qibo_rag.py  docstring_gen.py  no_RAG.py
qiboKnow/: README.md
scoring_json/: scoring_gemma3:12b.json  scoring_gemma3:4b.json
settings_json/: README.md  golden_answers.json  golden_answers_2.json  hyp_settings.json  questions.json  questions_2.json  settings.json
ui/: Home.py  RAG_hybrid_app.py
ui/pages/: 01_Chat.py  02_Agent_issue.py  RAG_hybrid_app.py  issue.py
