[tool.poetry]
name = "qibo-rag"
version = "0.1.0"
description = "RAG pipeline for Qibo documentation using LangChain, with auto-scoring of answers."
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# LangChain core + components
langchain = "0.3.27"
langchain-community = "0.3.29"
langchain-chroma = "0.2.5"
langchain-ollama = "0.3.8"

# Utility libraries
nbformat = "5.10.4"

# Qibo library
qibo = "^0.2.21"

[tool.poetry.group.dev.dependencies]
pylint = "3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
